manifests/plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media
      volumes:
      - name: config
        hostPath:
          path: /data/plex-config
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /data/media
          type: Directory
