manifests/60-plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media
        hostPath:
          path: /data/media
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media-stack
spec:
  selector:
    app: plex
  type: ClusterIP
  ports:
  - name: http
    port: 32400
    targetPort: http
    protocol: TCP
