manifests/90-ingress-nipio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-stack
  namespace: media-stack
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: qbittorrent.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080

  - host: prowlarr.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696

  - host: radarr.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878

  - host: sonarr.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989

  - host: overseerr.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055

  - host: plex.192.168.3.27.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
